samples/_failures_safe/1761360926_889708_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2182fa98.c: In function ‘main’:
./samples/SAFE/__tmp_2182fa98.c:156:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  156 |     for (size_t i
      |     ^~~
./samples/SAFE/__tmp_2182fa98.c:156:5: error: expected declaration or statement at end of input
